--- a/roles/ctx-install-management-components/tasks/main.yml
+++ b/roles/ctx-install-management-components/tasks/main.yml
@@ -44,6 +44,7 @@
     ansible_become_user: "{{ domain_admin }}"
     ansible_become_pass: "{{ domain_admin_password }}"
   register: ctxsetup
+  run_once: true
 
 
   
