--- a/vars/ctx/2212.yml
+++ b/vars/ctx/2212.yml
@@ -15,11 +15,9 @@ exepath: '{{ disk_image_out.mount_paths[0] }}x64\XenDesktop Setup\XenDesktopServ
 sfexepath: '{{ disk_image_out.mount_paths[0] }}x64\Storefront\CitrixStoreFront-x64.exe'
 sfproductid: '{25C518E5-4D52-45D3-BDBA-0460DC7436EC}'
 
+#if not used in playbook to seperate the components, use this
 components: 'CONTROLLER,DESKTOPSTUDIO,DESKTOPDIRECTOR,LICENSESERVER'
 
 params_full: '/COMPONENTS {{ components }} /CONFIGURE_FIREWALL /QUIET /NOREBOOT /NOSQL /ignore_hw_check_failure'
-params_licserver: '/COMPONENTS LICENSESERVER /CONFIGURE_FIREWALL /QUIET /NOREBOOT /NOSQL /ignore_hw_check_failure'
-
-params_ddc: '/COMPONENTS CONTROLLER,DESKTOPSTUDIO /CONFIGURE_FIREWALL /QUIET /NOREBOOT /NOSQL /ignore_hw_check_failure'
     
 
